Updates from Overleaf

--- a/Likely_Examiner_Questions.tex
+++ b/Likely_Examiner_Questions.tex
@@ -30,5 +30,6 @@ After having read parts of the thesis, these are some of the questions people th
     \item VALOR
     \begin{itemize}
         \item Understand the origin of the dominant systematics + how they are modelled. 
+        \item Why do exclusive samples help. 
     \end{itemize}
 \end{itemize}
