--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -24,36 +24,11 @@ Thesis submitted in accordance with the requirements of the University of Liverp
 
 %% Abstract
 \setabstractextramargins{0cm}
-\begin{abstract}%[\smaller \thetitle\\ \vspace*{1cm} \smaller {\theauthor}]
-  %\thispagestyle{empty}
-
-The \gls{sbn} program is comprised of three Liquid Argon Time Projection Chamber detectors located along the beam line of the Booster Neutrino Beam at Fermilab. The three detectors are SBND, MicroBooNE and ICARUS and are at 110 m, 470 m and 600 m from the beam source respectively. The program was designed with the goal of either confirming or refuting the existence of light sterile neutrinos, which have been hinted at by the LSND and MiniBooNE experiments as well as results from reactor and gallium based neutrino experiments. The observation of sterile neutrinos would provide physics beyond the Standard Model as well as being a vital component in understanding the mass generation mechanism for neutrinos. One of the defining properties of sterile neutrinos is that they do not weakly interact meaning that direct detection is not viable, however, mixing may occur with the active neutrinos which allows for the appearance and disappearance of active neutrinos to be observed.  
-
-The development of electromagnetic shower reconstruction algorithms used in SBND are presented which are crucial for calculating the reconstructed neutrino energy from \nue CC interactions. The neutrino energy is one of the variables used to calculate the neutrino oscillation probability which is the other major topic that is discussed in this thesis. Assuming a $(3+1)$ neutrino framework, the \nue appearance and disappearance sensitivities are calculated from a \nue CC inclusive sample for the SBN program using Monte Carlo events. %The analysis included flux and interaction systematic parameters as well as a discussion on the possible impact due to efficiency uncertainties. 
-The \nue appearance exclusion sensitivities from SBND show a stronger constraint than previous results and the allowed region is compatible with the LSND result. The SBN \nue disappearance exclusion sensitivity excludes much of the allowed region from the ND280 detector whereas the SBN allowed region is still compatible with that from ND280.
-\end{abstract}
-
+\input{abstract}
 
 %% Declaration
-\begin{declaration}
-  Declaration
-  \vspace*{1cm}
-  \begin{comment}
-  Chapters 2 - Historical neutrino overview, obviously not my own work. \\
-  Chapter 3 - LArTPC physics and SBN program overview. Small contribution to work on the PDS system, otherwise not my work. \\
-  Chapter 4 - Many people work on Larsoft / Reconstruction. Shower Linear Energy tool originally worked on by Dom. Other two tools developed by me. \\
-  Chapter 5 - \nue event production and selection is work done by Dom (and Gray?), however, the most recent events sample were produced by me using their work. GENIE/miniboone systematics is work done by SOMEONE?. Detector systematics developed by VALOR group. Baseline approximation done by steve/dom. Impact of baseline studies done by me. \\
-  Chapter 6 - VALOR intially develped by Costas et. al. \nue stuff all done by me. Rhiannon did \numu. Impact of detector systematics all done by moi. 
-  
-  %\begin{flushright}
-  %  Name??
-  %\end{flushright}
-  \end{comment}
-\end{declaration}
-
-
-
-
+\setdeclarationextramargins{0cm}
+\input{declaration}
 
 %% Preface
 %\begin{preface}
